# GenAI_session6

./: .env.example  README.md  pyproject.toml
common/: data_loader.py  llm.py  rag_db.py
data/: customers.csv  data_analysis.csv  products.json  tool_registry.json.py  user_history.csv  weathers.json
examples/: 1.automated_fraud_prediction_multi_step.py  10.parallel_multi_source.py  2.step_by_step_newsfeedanalysis.py  3.self_critique_data_analyst_agent.py  4.multi_step_research_langchain_automated.py  5.tot_example.py  6.content_creation.py  7.planner_executor_langchain_financial_planning.py  9.code_research_agent.py  compat_imports.py
examples/data/: support_kb.txt  tickets.csv
examples/services/: config.py  fetchers.py  models.py
